<resources>
    <string name="app_name">lee_mutai_s_application5</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_continue">Continue</string>
  <string name="lbl_let_s_find_your">Let\u2019s Find your</string>
  <string name="lbl_e_receipt">E-Receipt</string>
  <string name="lbl_cancel_request">Cancel Request</string>
  <string name="msg_change_in_famil">Change in Family Size</string>
  <string name="lbl_5000">$5000</string>
  <string name="lbl_350_month">$350 /month</string>
  <string name="lbl_5002">$500</string>
  <string name="lbl_email_address">Email Address</string>
  <string name="lbl_willow_haven">Willow Haven</string>
  <string name="lbl_description">Description</string>
  <string name="lbl_step_1_4">Step 1/4</string>
  <string name="lbl_phone_number">Phone Number</string>
  <string name="lbl_lorem">Lorem </string>
  <string name="lbl_recent_view">Recent View</string>
  <string name="lbl_raj_kumar">Raj Kumar</string>
  <string name="msg_arrange_tours_t">Arrange Tours to View
Properties</string>
  <string name="lbl_cvv">CVV</string>
  <string name="lbl_review_summary">Review Summary</string>
  <string name="lbl_yes_remove">Yes, Remove</string>
  <string name="msg_your_perfect_ho"> Your Perfect Home
</string>
  <string name="lbl_day2">Day </string>
  <string name="lbl_male">Male</string>
  <string name="lbl_swimming">Swimming...</string>
  <string name="lbl_gallery_400">Gallery (400)</string>
  <string name="lbl_change">Change</string>
  <string name="lbl_1_225">1,225</string>
  <string name="lbl_month">/month</string>
  <string name="lbl_username">Username</string>
  <string name="lbl_view_on_map">View on Map</string>
  <string name="lbl_expiry_date">Expiry Date</string>
  <string name="lbl_select">Select</string>
  <string name="lbl_apartment">Apartment</string>
  <string name="lbl_3_bhk_apartment">3 BHK Apartment</string>
  <string name="lbl_price_range">Price Range</string>
  <string name="lbl_sqft">sqft</string>
  <string name="lbl_gender">Gender</string>
  <string name="msg_to_view_propert">to View
Properties</string>
  <string name="lbl_recent_search">Recent Search</string>
  <string name="msg_download_e_rece">Download E-Receipt</string>
  <string name="lbl_today_6_oct">Today
6 Oct</string>
  <string name="lbl_amount">Amount</string>
  <string name="msg_november_03_20">November 03, 2023 </string>
  <string name="lbl_000">000</string>
  <string name="lbl_check_in">Check In</string>
  <string name="lbl_today2">Today</string>
  <string name="msg_1012_ocean_avan">1012 Ocean avanue, New yourk, USA</string>
  <string name="msg_request_receive">Request Received!</string>
  <string name="msg_credit_debit">Credit &amp; Debit Card</string>
  <string name="lbl_completed">Completed</string>
  <string name="lbl_card_number">Card Number</string>
  <string name="msg_dummy_text_prin">dummy text printing</string>
  <string name="lbl_password">Password</string>
  <string name="lbl_change_in_plans">Change In Plans</string>
  <string name="lbl_lorem_house">Lorem House</string>
  <string name="lbl_yesterday">Yesterday</string>
  <string name="msg_7487_8985_9797">7487 8985 9797 6555</string>
  <string name="lbl_find">Find</string>
  <string name="lbl_2_5_3_0">2.5-3.0</string>
  <string name="msg_enter_phone_num">Enter Phone Number</string>
  <string name="lbl_350">$350</string>
  <string name="msg_october_04_202">October 04, 2023</string>
  <string name="lbl_apply">Apply</string>
  <string name="msg_don_t_worry_on">Don\u2019t worry, only you ca see your personal
data. No one else will be able to see it.</string>
  <string name="msg_agent_will_take">Agent Will take you on the tour!</string>
  <string name="lbl_restaurant">Restaurant</string>
  <string name="lbl_add_photo">add photo</string>
  <string name="lbl_20">$20</string>
  <string name="lbl_bedrooms">Bedrooms</string>
  <string name="lbl_category">Category</string>
  <string name="lbl_book_now">Book Now</string>
  <string name="lbl_wi_fi">Wi-fi</string>
  <string name="lbl_22">2+</string>
  <string name="lbl_1hr">1hr</string>
  <string name="lbl_age">Age</string>
  <string name="msg_avenue_west_si">Avenue, West Side</string>
  <string name="msg_card_holder_nam">Card Holder Name</string>
  <string name="lbl_4_5_and_above">4.5 and above</string>
  <string name="lbl_booking_options">Booking Options</string>
  <string name="lbl_female">Female</string>
  <string name="lbl_bathroom">Bathroom</string>
  <string name="lbl_4_9">4.9</string>
  <string name="lbl_91_8949952520">+91 8949952520</string>
  <string name="msg_lorem_ipsum_is5">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard."</string>
  <string name="msg_lorem_ipsum_is3">Lorem Ipsum is simply dummy text </string>
  <string name="lbl_most_reated">Most Reated</string>
  <string name="msg_lorem_ipsum_is4">Lorem Ipsum is simply dummy text of the printing.Lorem Ipsum is simply dummy text of the printing.</string>
  <string name="lbl_12">1+</string>
  <string name="msg_lorem_ipsum_is2">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
  <string name="lbl_get_started">Get Started</string>
  <string name="lbl_sign_up">Sign Up</string>
  <string name="msg_property_review">Property Review Request</string>
  <string name="lbl_1500">$1500</string>
  <string name="lbl_skip">Skip</string>
  <string name="lbl_submit">Submit</string>
  <string name="lbl_today_5_oct">Today
5 Oct</string>
  <string name="lbl_3000">$3000</string>
  <string name="lbl_6_oct">6 Oct</string>
  <string name="lbl_save_card">Save Card</string>
  <string name="lbl_4_0_4_5">4.0-4.5</string>
  <string name="lbl_cancel_booking">Cancel Booking</string>
  <string name="lbl_cash">Cash</string>
  <string name="lbl_7_oct">7 Oct</string>
  <string name="lbl_apple_pay">Apple Pay</string>
  <string name="msg_find_your_perfe">Find Your Perfect Home
with Us Today.</string>
  <string name="lbl_3_0_3_5">3.0-3.5</string>
  <string name="lbl_best_offers">Best Offers</string>
  <string name="lbl_tour_request">Tour Request</string>
  <string name="lbl_4_457">4,457</string>
  <string name="lbl_sports_cl">Sports Cl..</string>
  <string name="lbl_reset_filter">Reset Filter</string>
  <string name="msg_542_results_fou">542 Results Found</string>
  <string name="lbl_more">More</string>
  <string name="lbl_5_0">5.0</string>
  <string name="lbl_agent">Agent</string>
  <string name="msg_lorem_ipsum_is">Lorem Ipsum is simply  
dummy text printing</string>
  <string name="msg_exclusive_offer">Exclusive Offers Inside</string>
  <string name="msg_personal_prefer">Personal Preferences</string>
  <string name="lbl_car_parking">Car Parking</string>
  <string name="lbl_02_30">02/30</string>
  <string name="lbl_transaction_id">Transaction ID</string>
  <string name="lbl_reviews">Reviews</string>
  <string name="lbl_7_30_pm">7:30 PM</string>
  <string name="lbl_3_0_4_0">3.0-4.0</string>
  <string name="lbl_book_tour">Book Tour</string>
  <string name="lbl_sandeep_s">Sandeep S.</string>
  <string name="lbl_top_rates">Top Rates</string>
  <string name="lbl_country">Country</string>
  <string name="msg_search_by_addre">Search by Address, City, or ZIP</string>
  <string name="lbl_abdullah_mamun">Abdullah Mamun</string>
  <string name="msg_august_24_2023">August 24, 2023 | 10:00 AM</string>
  <string name="lbl_helpful">Helpful?</string>
  <string name="lbl_sign_in">Sign In</string>
  <string name="lbl_property_tour">Property Tour</string>
  <string name="lbl_today_4_oct">Today
4 Oct</string>
  <string name="lbl_5_oct">5 Oct</string>
  <string name="lbl_facilities">Facilities</string>
  <string name="lbl_ipsum_is_simply">Ipsum is simply  
</string>
  <string name="msg_complete_profil">Complete Profile</string>
  <string name="lbl_booking">Booking</string>
  <string name="lbl_cancel">Cancel</string>
  <string name="lbl_unexpected_work">Unexpected Work</string>
  <string name="lbl_8801000000000">+8801000000000</string>
  <string name="msg_your_overall_ra2">Your overall rating</string>
  <string name="lbl_340_month">$340/month</string>
  <string name="msg_lorem_ipsum_sim">Lorem Ipsum simply</string>
  <string name="lbl_upcoming">Upcoming</string>
  <string name="msg_or_continue_wit">Or continue with</string>
  <string name="lbl_pet_center">Pet Center</string>
  <string name="lbl_azure_skyline">Azure Skyline</string>
  <string name="msg_add_detailed_re">Add detailed review</string>
  <string name="msg_example_gmail_c">example@gmail.com</string>
  <string name="lbl_bathrooms">Bathrooms</string>
  <string name="lbl_400">(400)</string>
  <string name="lbl_gym_fit">Gym &amp; Fit</string>
  <string name="msg_fri_october_4">Fri, October 4, 6:00 PM</string>
  <string name="lbl_7_00_pm">7:00 PM</string>
  <string name="lbl_listing_agent">Listing Agent</string>
  <string name="lbl_340_00">$340.00</string>
  <string name="lbl_3_0">3.0</string>
  <string name="lbl_cancelled">Cancelled</string>
  <string name="lbl_time">Time</string>
  <string name="msg_serenity_height">Serenity Heights</string>
  <string name="lbl_house">House</string>
  <string name="lbl_8_00_pm">8:00 PM</string>
  <string name="lbl_booking_date">Booking Date</string>
  <string name="lbl_add_card">Add Card</string>
  <string name="lbl_villa">Villa</string>
  <string name="lbl_filter">Filter</string>
  <string name="lbl_favorite">Favorite</string>
  <string name="msg_woodland_apartm">Woodland Apartment</string>
  <string name="msg_you_apartment_s">You Apartment Successfully Booked.
You can check your booking on the menu Profile.</string>
  <string name="lbl_go_to_home">Go to Home</string>
  <string name="lbl_total_price">Total Price</string>
  <string name="msg_remove_from_fav">Remove from Favorites?</string>
  <string name="lbl_100">$100</string>
  <string name="lbl_add_new_card">Add New Card</string>
  <string name="lbl_102">+10</string>
  <string name="lbl_mamun"> Mamun</string>
  <string name="lbl_4_oct">4 Oct</string>
  <string name="lbl_e_recepit">E-Recepit</string>
  <string name="lbl_others">Others</string>
  <string name="lbl_irm878748g548">#IRM878748G548</string>
  <string name="lbl_gallery">Gallery </string>
  <string name="lbl_2_months_ago">2 months ago</string>
  <string name="msg_your_overall_ra">Your overall rating of this product</string>
  <string name="lbl_enter_here">Enter here</string>
  <string name="lbl_payment_methods">Payment Methods</string>
  <string name="lbl_total">Total</string>
  <string name="lbl_near_you">Near You</string>
  <string name="lbl_today">Today
</string>
  <string name="lbl_91">+91</string>
  <string name="lbl_re_book">Re-Book</string>
  <string name="lbl_gallery2">Gallery</string>
  <string name="msg_view_all_172_re">View all 172 reviews</string>
  <string name="lbl_arrange_tours">Arrange Tours </string>
  <string name="lbl_name">Name</string>
  <string name="msg_more_payment_op">More Payment Options</string>
  <string name="msg_villa_apartme">Villa &amp; Apartment</string>
  <string name="msg_discover_proper">Discover Properties Using
The Map</string>
  <string name="lbl_month2">Month</string>
  <string name="msg_cancel_appointm">Cancel Appointment</string>
  <string name="lbl_real_estate">Real Estate</string>
  <string name="lbl_850_00">$850,00</string>
  <string name="msg_congratulations">Congratulations!</string>
  <string name="msg_how_was_your_ex">How was your experience with Raj?</string>
  <string name="lbl_today_7_oct">Today
7 Oct</string>
  <string name="lbl_email">Email</string>
  <string name="lbl_search">Search</string>
  <string name="lbl_laundry">Laundry</string>
  <string name="lbl_year">Year </string>
  <string name="lbl_1">1</string>
  <string name="lbl_my_bookings">My Bookings</string>
  <string name="lbl_2">2</string>
  <string name="lbl_duration">Duration</string>
  <string name="lbl_mobile_number">Mobile Number</string>
</resources>