<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearColumnbookingdate"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyle_8">
        <LinearLayout android:id="@+id/linearPatientsname2"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtBookingDate"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.34" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/lbl_booking_date"
                style="@style/txtPoppinssemibold13_3" tools:text="@string/lbl_booking_date"/>
            <TextView android:ellipsize="end" android:id="@+id/txtPrice"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_85pxh"
                android:layout_weight="0.66" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/msg_august_24_2023"
                style="@style/txtPoppinssemibold13_5" tools:text="@string/msg_august_24_2023"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearPatientsname3"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtCheckIn"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.34" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/lbl_check_in"
                style="@style/txtPoppinssemibold13_3" tools:text="@string/lbl_check_in"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtOctober04202"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_172pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.66" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/msg_october_04_202"
                style="@style/txtPoppinssemibold13_5" tools:text="@string/msg_october_04_202"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearPatientsname"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_19pxv"
            android:layout_marginEnd="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtDuration"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.31" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/lbl_duration"
                style="@style/txtPoppinssemibold13_3" tools:text="@string/lbl_duration"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguage"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_158pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.69" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/msg_november_03_20"
                style="@style/txtPoppinssemibold13_5" tools:text="@string/msg_november_03_20"/>
        </LinearLayout>
    </LinearLayout>
</layout>
