<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linear19BookTour"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnarrowdown"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700_19">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_6pxv"
                android:layout_marginEnd="@dimen/_23pxh"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearRowarrowdown"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageArrowdown"
                        android:layout_height="@dimen/_12pxh"
                        android:layout_marginBottom="@dimen/_7pxv"
                        android:layout_marginTop="@dimen/_7pxv"
                        android:layout_width="@dimen/_14pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowdown"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrowdown"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtBookTour"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_105pxh"
                        android:layout_weight="0.87"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/lbl_book_tour"
                        style="@style/txtPoppinssemibold18_2" tools:text="@string/lbl_book_tour"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearStep"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylewhite_9">
            <TextView android:ellipsize="end"
                android:id="@+id/txtStepFourteen"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_weight="0.2" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/lbl_step_1_4"
                style="@style/txtRubikmedium14" tools:text="@string/lbl_step_1_4"/>
            <ProgressBar android:id="@+id/progressBarGroup"
                android:indeterminate="false"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_17pxv"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_weight="0.8" android:layout_width="0dp"
                android:max="100" android:minHeight="@dimen/_5pxv"
                android:progress="38"
                android:progressDrawable="@drawable/layer_list_bg_blue_a700_4c_radius_2_5" style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtName"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="wrap_content"
            android:singleLine="true" android:text="@string/lbl_name"
            style="@style/txtPoppinssemibold13_1" tools:text="@string/lbl_name"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_101_radius_5"
            android:ellipsize="end"
            android:hint="@string/lbl_abdullah_mamun"
            android:id="@+id/etFrame117127549" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_15pxh"
            android:paddingTop="@dimen/_10pxv" android:singleLine="true"
            android:textColorHint="@color/bluegray_500"
            style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtEmail"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="wrap_content"
            android:singleLine="true" android:text="@string/lbl_email"
            style="@style/txtPoppinssemibold13_1" tools:text="@string/lbl_email"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_101_radius_5"
            android:ellipsize="end"
            android:hint="@string/msg_example_gmail_c"
            android:id="@+id/etEmailOne"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_8pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_15pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:textColorHint="@color/bluegray_500"
            style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtAge"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:singleLine="true" android:text="@string/lbl_age"
            style="@style/txtPoppinssemibold13_1" tools:text="@string/lbl_age"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowlanguage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <Spinner
                android:background="@drawable/layer_list_bg_gray_101_radius_5"
                android:id="@+id/spinnerLanguage"
                android:layout_height="wrap_content"
                android:layout_weight="0.33" android:layout_width="0dp" tools:listitem="@layout/spinner_item"/>
            <Spinner
                android:background="@drawable/layer_list_bg_gray_101_radius_5"
                android:id="@+id/spinnerMonth"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_weight="0.33" android:layout_width="0dp" tools:listitem="@layout/spinner_item"/>
            <Spinner
                android:background="@drawable/layer_list_bg_gray_101_radius_5"
                android:id="@+id/spinnerLanguageOne"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_weight="0.33" android:layout_width="0dp" tools:listitem="@layout/spinner_item"/>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtGender"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="wrap_content"
            android:singleLine="true" android:text="@string/lbl_gender"
            style="@style/txtPoppinssemibold13_1" tools:text="@string/lbl_gender"/>
        <RadioGroup android:gravity="start"
            android:id="@+id/rgRadiogroupmale"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <RadioButton android:ellipsize="end"
                android:fontFamily="@font/poppins"
                android:id="@+id/rbMale"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="wrap_content"
                android:paddingStart="@dimen/_11pxh"
                android:singleLine="true"
                android:text="@string/lbl_male"
                android:textColor="@color/bluegray_500"
                android:textFontWeight="500"
                android:textSize="@dimen/_13pxh"
                android:textStyle="bold" tools:text="@string/lbl_male"/>
            <RadioButton android:buttonTint="@color/bluegray_500"
                android:ellipsize="end"
                android:fontFamily="@font/poppins"
                android:id="@+id/rbFemale"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_31pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="wrap_content"
                android:paddingStart="@dimen/_11pxh"
                android:singleLine="true"
                android:text="@string/lbl_female"
                android:textColor="@color/bluegray_500"
                android:textFontWeight="500"
                android:textSize="@dimen/_13pxh"
                android:textStyle="bold" tools:text="@string/lbl_female"/>
            <RadioButton android:buttonTint="@color/bluegray_500"
                android:ellipsize="end"
                android:fontFamily="@font/poppins"
                android:id="@+id/rbOthers"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_9pxh"
                android:layout_marginStart="@dimen/_36pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="wrap_content"
                android:paddingStart="@dimen/_11pxh"
                android:singleLine="true"
                android:text="@string/lbl_others"
                android:textColor="@color/bluegray_500"
                android:textFontWeight="500"
                android:textSize="@dimen/_13pxh"
                android:textStyle="bold" tools:text="@string/lbl_others"/>
        </RadioGroup>
        <TextView android:ellipsize="end"
            android:id="@+id/txtMobileNumber"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/lbl_mobile_number"
            style="@style/txtPoppinssemibold13_1" tools:text="@string/lbl_mobile_number"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_101_radius_5"
            android:ellipsize="end"
            android:hint="@string/lbl_8801000000000"
            android:id="@+id/etMobileNo" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_15pxh"
            android:paddingTop="@dimen/_10pxv" android:singleLine="true"
            android:textColorHint="@color/bluegray_500"
            style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtCountry"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:singleLine="true" android:text="@string/lbl_country"
            style="@style/txtPoppinssemibold13_1" tools:text="@string/lbl_country"/>
        <Spinner
            android:background="@drawable/layer_list_bg_gray_101_radius_5"
            android:gravity="center_horizontal"
            android:id="@+id/spinnerLanguageTwo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent" tools:listitem="@layout/spinner_item"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumncontinue"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_65pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_6">
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnContinue"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@string/lbl_continue"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_2" tools:text="@string/lbl_continue"/>
        </LinearLayout>
    </LinearLayout>
</layout>
